# fingers-position-control

./: CMakeLists.txt  FingersPositionControlConfig.cmake.in  LICENSE  README.md
app/: CMakeLists.txt
app/conf/: left_config.ini  left_config_sim.ini  left_grasp_model.ini  left_hand_sequences.ini  right_config.ini  right_config_sim.ini  right_grasp_model.ini
src/: CMakeLists.txt
src/include/FingersPositionControl/: HandController.h
src/include/TactileControl/: HandController.h
src/src/: HandController.cpp
test/: CMakeLists.txt  main.cpp
test-package/: CMakeLists.txt  main.cpp
